Fix new icon not showing up for allclass sprays/achievements

--- a/css/global.css
+++ b/css/global.css
@@ -1067,22 +1067,25 @@ strong {
 }
 
 .new {
-  z-index: 1;
-  top: 5px;
+  position: absolute;
+  top: 11px ;
   right: 5px;
-  line-height: 1;
-  padding: 3px 4px;
-  box-shadow: 0 0 1px 1px rgba(0,0,0,.65);
-  border: 2px solid rgb(231, 155, 42);
+  z-index: 1;
+  padding: 3px;
+  letter-spacing: 0.4px;
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, .65);
+  border: 1.5px solid rgb(231, 155, 42);
   border-radius: 3px;
-  background-color: rgba(0,0,0,.65);
+  background-color: rgba(0, 0, 0,.65);
   color: rgb(255, 227, 11);
   font-size: 8px;
   font-family: Futura, century gothic, arial, sans-serif;
   text-transform: uppercase;
-  position: absolute;
-  top: 11px ;
-  right: 6px;
+
+}
+
+[achievement="true"] .new {
+  right: 38px;
 }
 
 /**
